--- a/theme.scss.liquid
+++ b/theme.scss.liquid
@@ -1538,7 +1538,10 @@ a {
 .btn--secondary {
   @include accentFontStack;
   padding: 12px 20px;
-  font-size: em(13px);
+  letter-spacing: 1em;
+  text-transform: uppercase;
+  padding: .8em 1.5em;
+  font-size: 1em;
 }
 
 .input-group .btn,
