added 'copywrite' class object and added margin for shop.name in footer

--- a/theme.scss.liquid
+++ b/theme.scss.liquid
@@ -4403,3 +4403,10 @@ button.mfp-arrow {
   }
 }
 
+/* =========
+   Added a new Class object for the business name on the Footer.
+   ========= */
+
+   .copywrite {
+    margin:1.5em;
+   }
