--- a/timber.scss.liquid
+++ b/timber.scss.liquid
@@ -1744,7 +1744,7 @@ $socialIconFontStack: 'icons';
 .payment-icons {
   @include prefix('user-select', 'none');
   cursor: default;
-  margin-bottom:0;
+  margin-top:2.5em;
 
   li {
     margin: 0 0 ($gutter / 4) ($gutter / 4);
@@ -1758,7 +1758,7 @@ $socialIconFontStack: 'icons';
   .icon {
     width: 38px;
     height: 24px;
-  }
+  }s
 }
 
 
