copied theme.scss.liquid from shopify site. copied timber.scss.liquid from shopify site.

--- a/timber.scss.liquid
+++ b/timber.scss.liquid
@@ -1758,7 +1758,7 @@ $socialIconFontStack: 'icons';
   .icon {
     width: 38px;
     height: 24px;
-  }s
+  }
 }
 
 
@@ -3269,3 +3269,10 @@ $socialIconFontStack: 'icons';
   }
 }
 
+/* =========
+   Added a new Class object for the business name on the Footer.
+   ========= */
+
+   .copywrite {
+    margin:1.5em;
+   }
