--- a/theme.scss.liquid
+++ b/theme.scss.liquid
@@ -1539,7 +1539,7 @@ a {
 .btn--secondary {
   @include accentFontStack;
   padding: 12px 20px;
-  letter-spacing: 1em;
+  letter-spacing: .1em;
   text-transform: uppercase;
   padding: .8em 1.5em;
   font-size: 1em;
