modified:   timber.scss.liquid; added search result styling, changed product spacing on view.product page

--- a/timber.scss.liquid
+++ b/timber.scss.liquid
@@ -2997,8 +2997,8 @@ $socialIconFontStack: 'icons';
 }
 
 .product-single__description {
-  margin-top: 40px;
-  text-align: left;
+  margin-top: 2em;
+  text-align: center;
 }
 
 .product-single__full-details {
@@ -3276,4 +3276,46 @@ $socialIconFontStack: 'icons';
    .copywrite {
     margin:1.5em;
    }
-   #site-footer .footer-widgets,#site-footer .footer-widgets p{font-size:15px}#site-footer .footer__widget__text p a,#site-footer .footer__widget__newsletter p a{text-decoration:underline}#site-footer .footer__widget__text p a:hover,#site-footer .footer__widget__newsletter p a:hover{text-decoration:none}#site-footer .footer__copyright{font-size:13px}#site-footer .footer__menu li{display:inline-block;width:49%}#site-footer a,#site-footer .menu li a{color:#2f3957}#site-footer a:hover,#site-footer .menu li a:hover{color:#2f3957}#site-footer .footer__copyright,#site-footer .footer__copyright a{color:#2f3957}#site-footer .footer__copyright a:hover{color:#2f3957}#site-footer .newsletter__form-wrap .form__input{background-color:#fff;color:#2f3957;border-color:#cccee1;box-shadow:none}#site-footer .newsletter__form-wrap .form__input::placeholder{color:#2f3957;opacity:0.5}#site-footer .newsletter__form-wrap .form__input:focus{background-color:#fff;border-color:#d6d7e7;box-shadow:none}#site-footer .newsletter__form-wrap .button,#site-footer .newsletter__form-wrap .button:active,#site-footer .newsletter__form-wrap .button:focus,#site-footer .newsletter__form-wrap .button:visited{background-color:#436be0;font-size:15px}#site-footer .newsletter__form-wrap .button:hover,#site-footer .newsletter__form-wrap .button:active:hover,#site-footer .newsletter__form-wrap .button:focus:hover,#site-footer .newsletter__form-wrap .button:visited:hover{background-color:#224ece}.content-section{padding-top:3rem;padding-bottom:1.5rem}.section-title{font-size:1.75rem;font-weight:700;margin-bottom:2rem}@media print, screen and (min-width: 46.875em){.section-title{margin-bottom:3rem}}.section-title::after,
+
+
+/* =========
+   Added a new Class object for pagination on search results.
+   ========= */
+
+.p-tag-search{
+   text-align: center;
+   padding-top: 3.4em;
+   text-transform: uppercase;
+   font-weight: 550;
+   font-size: x-large;
+}
+
+
+/* =========
+   Added a new Class object for NUL search result.
+   ========= */
+.no-result{
+   text-align: center;
+   padding-top: 2.5em;
+   font-weight: 550;
+   color: red
+}
+
+/* =========
+   Added a new Class object for NUL search result.
+   ========= */
+
+.search-terms{
+   text-align: center;
+}
+
+/* =========
+   Added a new Class object for UPSELL on search result.
+   ========= */
+   
+.no-result1{
+   text-align: center;
+   padding-top: 2.5em;
+   font-weight: 550;
+   color: red
+}
